mmcli dump list key value issue
There seems a small issue in "mmcli -m 0 --messaging-list-sms -K" reporting (in MM 1.18.6). When the number of SMS is >= 100 then closing square bracket for the message index is missing in the output as shown below (see index 100 and above, closing square bracket is missing). Please advise how this can be addressed.
This is an example and similar problem will be with other key/value pair with >= 100 entries
mmcli -m 0 --messaging-list-sms -K modem.messaging.sms.length : 189
modem.messaging.sms.value[1] : /org/freedesktop/ModemManager1/SMS/188
modem.messaging.sms.value[2] : /org/freedesktop/ModemManager1/SMS/187
modem.messaging.sms.value[3] : /org/freedesktop/ModemManager1/SMS/186
...
...
modem.messaging.sms.value[8] : /org/freedesktop/ModemManager1/SMS/181
modem.messaging.sms.value[9] : /org/freedesktop/ModemManager1/SMS/180
modem.messaging.sms.value[10] : /org/freedesktop/ModemManager1/SMS/179
modem.messaging.sms.value[11] : /org/freedesktop/ModemManager1/SMS/178
modem.messaging.sms.value[12] : /org/freedesktop/ModemManager1/SMS/177
modem.messaging.sms.value[13] : /org/freedesktop/ModemManager1/SMS/176
modem.messaging.sms.value[14] : /org/freedesktop/ModemManager1/SMS/175
...
...
modem.messaging.sms.value[98] : /org/freedesktop/ModemManager1/SMS/91
modem.messaging.sms.value[99] : /org/freedesktop/ModemManager1/SMS/90
modem.messaging.sms.value[100 : /org/freedesktop/ModemManager1/SMS/89 < - - closing square bracket missing after 100
modem.messaging.sms.value[101 : /org/freedesktop/ModemManager1/SMS/88
modem.messaging.sms.value[102 : /org/freedesktop/ModemManager1/SMS/87
modem.messaging.sms.value[103 : /org/freedesktop/ModemManager1/SMS/86
modem.messaging.sms.value[104 : /org/freedesktop/ModemManager1/SMS/85