mmcli: correctly set key_length

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/559