cli/mmcli-output.c
@@ -1446,8 +1446,10 @@ dump_output_list_keyvalue (MmcF field)
     }
 
     if (n > 0) {
+        guint aux = n;
+
         key_length += ((strlen (KEY_ARRAY_VALUE_SUFFIX)) + 3);
-        if (n > 10)
+        while ((aux /= 10) > 0)
             key_length++;
     }
 
